<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/navigate_apps"
            style="@style/NavigationDrawerItem"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/item_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate_statistics"
            style="@style/NavigationDrawerItem"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/item_month_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month_statistics"
            style="@style/NavigationDrawerItem"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/item_fast_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate_fast_statistics"
            style="@style/NavigationDrawerItem"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/item_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="8dip"
            android:text="@string/navigate_settings"
            style="@style/NavigationDrawerItem"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />


    </LinearLayout>
</ScrollView>