<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/idFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/ibPreviousMonth"
                style="@style/SelectorCalendar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:contentDescription="@string/previous_month"
                android:src="@drawable/ic_action_previous_item"/>

            <TextView
                android:id="@+id/tvDateMonth"
                style="@style/SelectorCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/ibNextMonth"
                style="@style/SelectorCalendar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:contentDescription="@string/next_month"
                android:src="@drawable/ic_action_next_item"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="8dip"
                >


                <TextView
                    android:id="@+id/tvHeadAppName"
                    style="@style/headGridView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:text="@string/name_app"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvHeadCrashes"
                    style="@style/headGridView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/crashes"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvHeadLoads"
                    style="@style/headGridView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/loads"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvHeadAppErrors"
                    style="@style/headGridView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/error_percent"
                    android:textSize="17sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/lvApplications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/orange"
                    android:listSelector="@android:color/transparent"
                    android:verticalSpacing="2dip">
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvSelectGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_type_data"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvGraphTypeCrashes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/graph_type_data_crashes"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvGraphTypeLoads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/graph_type_data_loads"
                    android:textSize="17sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.50"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</RelativeLayout>